--- a/Documents/python-projects/inspirational_scraping/app/index.html
+++ b/Documents/python-projects/inspirational_scraping/app/index.html
@@ -15,35 +15,7 @@
 </div>
 
 </body>
-<script type="text/javascript">
-	var theData; 
-	$(document).ready(function(){
-		$.get("/data", function(string) {
-    		theData = ' "' +  string + '" ';
-		});
-	});
-
-	// $.getJSON('https://www.reddit.com/r/wallpapers/top/.json?count=20', function(data) 
-
-	var inside_text = '"DM me Id ride u and cum where ever you wanted as long as its in you a**" - DirtyDaddy69';
-	$.getJSON("http://www.reddit.com/r/wallpaper/.json?jsonp=?", function(data) {
-		console.log(data);
-		var random = Math.floor(Math.random()*25);
-
-	    $.each(data.data.children, function(i,item){
-	    	if(i == random){
-	         $("<img/>").attr("src", item.data.url).appendTo("#images");
-	         $("<h2>").attr("id", "caption").appendTo("#images");
-	         $("<h3>").attr("id", "caption_name").appendTo("#images");
-
-	    	$("#caption").html(theData);
-	    	$("#caption_name").html("justpornhubthings");
-	    	}
-	     });
-	});
-	
-	
-</script>
+<script src="image-gen.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </html>
 
