added comment to index

--- a/Documents/python-projects/inspirational_scraping/app/index.html
+++ b/Documents/python-projects/inspirational_scraping/app/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<!-- Hello! My name is Tony. I decided to build this app to teach myself web scraping. 
+None of the words that appear on the site are my own, they are comments scraped from a popular adult video sharing website.
+Also, please don't steal my code.  -->
 <head>
 
     <title>Inspirational Quotes from Not-So-Inspirational Folks</title>
