Remade into a standalone flask app

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@ Also, please don't steal my code.  -->
 </div>
 
 </body>
-<script src="image-gen.js"></script>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<script src="/static/image-gen.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/styles.css">
 </html>
 
